Deploy 2ndHand project

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fetching News API - React App | Arseny Klyuchnik</title>
+    <title>2ndHand | Typescript React Redux App | Arseny Klyuchnik</title>
   </head>
   <body>
     <noscript>
